// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HashTable add 1`] = `
"5) (5)
6) (6)"
`;

exports[`HashTable double add 1`] = `"7) (bob)"`;

exports[`HashTable remove 1`] = `
"5) (5)
8) (8)"
`;

exports[`HashTable remove 2`] = `
"5) ()
8) (8)"
`;
